--- a/public/css/romanticc.css
+++ b/public/css/romanticc.css
@@ -199,3 +199,24 @@ a.link:hover {
 .light_blue {
     color: #b2c7d8;
 }
+
+.feedback-holder {
+    padding: 10px; 
+    background-color: #fff; 
+    border-bottom: solid 1px #e4e4e4;
+    font-size: 0.8em;
+}
+
+.feedback-author {
+    font-size: 0.9em; 
+    font-weight: bold;
+}
+
+.date {
+   font-size: 0.9em;    
+}
+
+.time {
+    color: a1a1a1;
+    font-size: 0.8em;
+}
