--- a/public/css/romanticc.css
+++ b/public/css/romanticc.css
@@ -156,13 +156,9 @@ table.categories {
 }
 
 .main_content {
-    background: none repeat scroll 0 0 #FCFCFC;
+    background-color: #FCFCFC;
     border: 1px solid #CCCCCC;
-    margin-bottom: 30px; 
-    min-height: 600px;
-    padding: 30px;
-    margin-right:4%; 
-    margin-left:18%;   
+    padding: 10px;
 }
 
 .content {
@@ -217,6 +213,21 @@ a.link:hover {
 }
 
 .time {
-    color: a1a1a1;
+    color: #a1a1a1;
     font-size: 0.8em;
+}
+
+.filter-holder {
+    background-color: #babfc2; 
+    padding: 10px;   
+}
+
+.form-select-holder {
+    background-color: #f4f4f4; 
+    padding: 10px;   
+}
+
+.sort-by-holder {
+    background-color: #cfdce5; 
+    padding: 3px;   
 }
