--- a/public/css/gridless.css
+++ b/public/css/gridless.css
@@ -89,7 +89,7 @@ th {
 }
 tr, th, td {
 	padding-right: 1.625em;
-	border-bottom: 1px solid #333;
+	/*border-bottom: 1px solid #333;*/
 }
 
 /* `Forms
