--- a/public/css/romanticc.css
+++ b/public/css/romanticc.css
@@ -24,6 +24,10 @@ ul.nav {
     float: right;
 }
 
+.feedback-controls {
+
+}
+
 ul.filter_nav, .filter_nav ul { 
     margin: 0;
     padding: 0;
@@ -230,4 +234,48 @@ a.link:hover {
 .sort-by-holder {
     background-color: #cfdce5; 
     padding: 3px;   
+}
+
+.head {
+    background-color: transparent;
+    color: #006575;
+    font-family: Arial,Helvetica,sans-serif;
+    font-size: 13px;
+    font-weight: bold;
+    line-height: 40px;
+    margin: 0;
+    padding: 0;
+}
+
+.savebox {
+    background-color: #EBEBED !important;
+    padding: 0 10px !important;
+}
+
+.save-head {
+    background-color: transparent;
+    color: #6C7A86;
+    display: block;
+    font-family: Arial,Helvetica,sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+    margin: 0;
+    padding: 12px 0 2px;
+}
+
+.smlsty {
+    color: #757576;
+    display: block;
+    font-size: 10px;
+    line-height: normal;
+    margin: 0;
+    padding: 0 0 15px;
+}
+
+table.user-info {
+    width: 100%;    
+}
+
+table.user-info td {
+    font-size: 0.8em;    
 }
