--- a/public/css/gridless.css
+++ b/public/css/gridless.css
@@ -29,8 +29,8 @@ body {
 	min-height: 100%;
 }
 body {
-	font: 16px/1.625 Georgia, serif;
-	*font-size: 1em; /* IE7 and older: IE can't resize px based text and most mobiles don't default the text to 16px */
+	font: 1.1em/1.625 "Lucida Grande",verdana,arial,helvetica,sans-serif;
+	*font-size: 1.1em; /* IE7 and older: IE can't resize px based text and most mobiles don't default the text to 16px */
 	color: #222; /* Black on white is too much contrast, #222 is a lot better */
 }
 p, blockquote, q, pre, address, hr, code, samp, dl, ol, ul, form, table, fieldset, menu, h4, h5, h6, img {
@@ -41,7 +41,7 @@ p, blockquote, q, pre, address, hr, code, samp, dl, ol, ul, form, table, fieldse
 ---------------------------------------- */
 h1, h2, h3, h4, h5, h6 {
 	font-weight: bold;
-	font-family: 'Palatino', 'Palatino Linotype', 'Book Antiqua', 'FreeSerif', serif;
+	font-family: "Lucida Grande",verdana,arial,helvetica,sans-serif;
 }
 h1 {
 	font-size: 4.25em; /* 68px */
