--- a/public/css/gridless.css
+++ b/public/css/gridless.css
@@ -29,7 +29,7 @@ body {
 	min-height: 100%;
 }
 body {
-	font: 1.1em/1.625 "Lucida Grande",verdana,arial,helvetica,sans-serif;
+	font: 1.1em/1.625 verdana,arial,helvetica,sans-serif;
 	*font-size: 1.1em; /* IE7 and older: IE can't resize px based text and most mobiles don't default the text to 16px */
 	color: #222; /* Black on white is too much contrast, #222 is a lot better */
 }
