--- a/public/css/romanticc.css
+++ b/public/css/romanticc.css
@@ -303,8 +303,10 @@ li.Matched {
     position: absolute;
     background-color: #f0f0f0;
     padding: 10px;
+    right: 120px;
+    top: 1px;
 }
 
 ul.category-picker li {
-    font-size: 0.8em; 
+    font-size: 1.8em; 
 }
