--- a/public/css/romanticc.css
+++ b/public/css/romanticc.css
@@ -310,3 +310,21 @@ li.Matched {
 ul.category-picker li {
     font-size: 1.8em; 
 }
+
+/*TODO: Must ask Dan to help me fix this...*/
+div.undo-bar {
+    position: fixed;    
+    width: 450px;
+    font-size: 1.2em;
+    font-weight: bold;
+    background: #fef1b5;
+    text-align: center;
+    left: 40%;
+    top: 30%;
+    z-index: 200; 
+    padding: 5px;
+    -webkit-border-radius:12px;
+    -moz-border-radius:12px;
+    border-radius:12px;
+    margin:2px 5px;
+}
