upgraded core framework

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -59,7 +59,7 @@ sup.count{background:#d92222;text-shadow:#a31a1a 0px -1px;color:#FFF;font-size:1
 /* hover state */									 
 #admin-panel .left-panel .left-buttons ul li.request a{background:url(../img/ico-mail.png) no-repeat left top;}
 #admin-panel .left-panel .left-buttons ul li.add     a{background:url(../img/ico-add.png) no-repeat left top;}
-#admin-panel .left-panel .left-buttons ul li.deleted a{background:url(../img/ico-delete.png) no-repeat left top;}
+#admin-panel .left-panel .left-buttons ul li.delete a{background:url(../img/ico-trash.png) no-repeat left top;}
 #admin-panel .left-panel .left-buttons ul li 		 a{color:#FFF;padding:4px 5px 4px 30px;}
 
 #admin-panel .left-panel .left-buttons ul li:hover{background:#56606c}
