improved UI usability Inbox

--- a/public/css/romanticc.css
+++ b/public/css/romanticc.css
@@ -349,3 +349,10 @@ div.undo-bar {
 .delete-selection {
     width: 50%;    
 }
+
+.status-message > span {
+    -webkit-border-radius:3px;
+    -moz-border-radius:3px;
+    border-radius:3px;
+    padding: 1px 4px 1px;
+}
