--- a/public/css/romanticc.css
+++ b/public/css/romanticc.css
@@ -358,13 +358,13 @@ div.undo-bar {
 }
 
 .checky-bar > div { 
-    position: relative;    
-    width: 450px;
+    position: fixed;    
+    width: 550px;
     font-size: 1.2em;
     font-weight: bold;
     text-align: center;
-    left: 20%;
-    top: 23%;
+    left: 33%;
+    top: 20%;
     background-color: #fef1b5;
     z-index: 200; 
     padding: 5px;
