--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -365,3 +365,20 @@ background:#eceff1;
 }
 .widget-block .html-code textarea{display:block;width:338px;height:133px;border:none;padding:10px;font-size:11px;}
 .feedback-td-font { font-size: 12px; }
+
+#lightbox {
+	position: absolute;top: 0;left: 50%;width: 400px;margin-left: -200px;padding:0px;background: #FFF;z-index: 100001;display: none;border:2px solid #6b7984;-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;text-align:center;}
+#lightbox-shadow{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: #000;
+	filter: alpha(opacity=75);
+	-moz-opacity: 0.75;
+	-khtml-opacity: 0.75;
+	opacity: 0.75;
+	z-index: 100000;
+	display: none;
+}
