--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -369,7 +369,7 @@ background:#eceff1;
 #lightbox {
 	position: absolute;top: 0;left: 50%;width: 400px;margin-left: -200px;padding:0px;background: #FFF;z-index: 100001;display: none;border:2px solid #6b7984;-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;text-align:center;}
 #lightbox-shadow{
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
