--- a/public/css/s36_client_style.css
+++ b/public/css/s36_client_style.css
@@ -33,14 +33,17 @@
 }
 
 #s36_closebtn{
-	cursor:pointer;
-	position:absolute;
-	top:-10px;
-	right:-10px;
-	background:#666;
-	height:20px;
-	width:20px;
+    cursor: pointer;
+    position:absolute;
+    top:-20px;
+    right:-20px;
+    height:45px;
+    width:45px;
+    background:url(/img/s36-btn-cl.png) no-repeat; 
 }
+
+#s36_closebtn:hover{background-position:top}
+
 #s36_widget_button{
 	width:76px;
 	height:77px;
