--- a/public/css/form_default.css
+++ b/public/css/form_default.css
@@ -279,4 +279,18 @@ input:focus{border:1px solid #b1d1e4;outline:#b1d1e4;box-shadow:#daecf8 0px 0px 
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
 }
+/* crop button */
+a.cropbtn{
+	background:#1cb5f5;
+	border:1px solid #0d9cd7;
+	color:#FFF;
+	text-shadow:none;
+}
+a.cropbtn:hover{
+	background:#4dc9fc;
+	border:1px solid #1cb5f5;
+	color:#FFF;
+	text-shadow:none;
+}
+/* crop button */
 
