--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -91,6 +91,7 @@ sup.count{background:#d92222;text-shadow:#a31a1a 0px -1px;color:#FFF;font-size:1
 #admin-panel .main-panel .admin-status-bar .setup		{background:url(../img/ico-setup.png) 		no-repeat left center;}
 #admin-panel .main-panel .admin-status-bar .contacts	{background:url(../img/ico-contacts.png) 	no-repeat left center;}
 #admin-panel .main-panel .admin-status-bar .trash	    {background:url(../img/ico-trash.png) 	no-repeat left center;}
+#admin-panel .main-panel .admin-status-bar .request	    {background:url(../img/ico-setup.png) 	no-repeat left center;}
 #admin-panel .main-panel .admin-status-bar .current-page span{color:#666666;margin-left:14px;font-weight:normal;text-shadow:none;}
 
 #admin-panel .main-panel .admin-nav-bar{padding:8px 20px;display:block;background:#FFF;margin-top:10px;}
