--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -314,6 +314,7 @@ background:url(../img/false-border.png) repeat-x bottom;
 .widget-types h3 label{cursor:pointer;}
 .widget-opts{
 padding:5px 10px;
+position:relative;
 }
 .templates ul{list-style:none}
 .templates ul li{width:84px;}
