--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -173,8 +173,8 @@ sup.count{background:#d92222;text-shadow:#a31a1a 0px -1px;color:#FFF;font-size:1
 #admin-panel .main-panel .right .timestamp input{margin:0px 0px;padding:0px;width:20px;height:17px;border:none;background:url(../img/ico-sprite-options.png) no-repeat;cursor:pointer;}
 #admin-panel .main-panel .right .timestamp input.flag  {background-position:-100px 0px;position:absolute;top:0;right:5px;}
 #admin-panel .main-panel .right .timestamp input.remove{background-position:-120px 0px;position:absolute;bottom:0;right:5px;}
-#admin-panel .main-panel .right .timestamp input.flag:hover  {background-position:-100px bottom;}
-#admin-panel .main-panel .right .timestamp input.remove:hover{background-position:-120px bottom;}
+#admin-panel .main-panel .right .timestamp input.flag:hover  {background-position:-100px -17px;}
+#admin-panel .main-panel .right .timestamp input.remove:hover{background-position:-120px -17px;}
 
 #admin-panel .main-panel .block{border-bottom:1px solid #e4e5e6;display:block;padding:10px 20px 10px 34px;line-height:17px;}
 #admin-panel .main-panel .block span.count{border:1px solid #e3e3e3;-webkit-border-radius:10px;-moz-border-radius:10px;border-radius:10px;padding:3px 5px;margin-right:20px;font-weight:bold;}
